# taser-bot-smart-runtime-v2

./: .env  .env Baseline  .env.additions  .env.example  .gitignore  .pre-commit-config.yaml  PATCH_NOTES.md  README.md  githubsshkey  githubsshkey.pub  ledger.duckdb  main.py  main_old.py  pyproject.toml  repo_structure.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: RUNBOOK.md  __init__.py  ai_rm.py  analytics.py  audit.py  config copy.py  config.py  dashboard.py  data.py  dataflow.md  dataflow1.md  db.py  execution.py  heatmap_store.py  indicators.py  ledger_duck.py  logger.py  maintenance.py  memory.py  messaging.py  messenger.py  money.py  orderflow.py  recovery.py  regime.py  scalper.py  scheduler.py  scheduler_old.py  settings.py  simulator.py  state.py  surveillance.py  taser_rules.py  taser_rules_old.py  taskfortomorrowreview.md  telemetry.py  telemetry_api.py  testkeys.py  tp_calc.py  trendfollow.py  (+2 more)
app/components/: confirm.py  guards.py  locks.py  ratchet.py  router.py  tp.py
app/datafeed/: dataset_builder.py  delta_fetcher.py  delta_ws.py
app/manage/: flow.py  pev.py  reverse.py
app/managers/: trendscalp_fsm.py
app/ml/: features_lorentz.py  gate.py  knn_lorentz.py  ml_assist.py  scaler.py  store.py  walkforward.py
app/pm/: portfolio.py
app/runners/: trendscalp_runner baseline.py  trendscalp_runner.py
datasets/BTCUSD/5m/: BTCUSD_5m_2025-09-10.parquet  BTCUSD_5m_2025-09-11.parquet  BTCUSD_5m_2025-09-12.parquet  BTCUSD_5m_2025-09-13.parquet  (+6 more)
scripts/: nightly_trainer.py
tests/: test_smoke.py
(+30 files in other folders)
